Added a Clear button to the Group Reports tab.

--- a/src/ROMdb/Views/RequirementsEntryView.fxml
+++ b/src/ROMdb/Views/RequirementsEntryView.fxml
@@ -679,12 +679,16 @@
                                                 <ListView fx:id="listview_choices" prefHeight="141.0" prefWidth="220.0" />
                                                 <VBox alignment="CENTER">
                                                    <children>
-                                                      <Button fx:id="button_add" minWidth="30.0" mnemonicParsing="false" text="&gt;">
+                                                      <Button fx:id="button_add" minWidth="43.0" mnemonicParsing="false" text="&gt;">
                                                          <VBox.margin>
                                                             <Insets bottom="10.0" />
                                                          </VBox.margin>
                                                       </Button>
-                                                      <Button fx:id="button_remove" minWidth="30.0" mnemonicParsing="false" text="&lt;" />
+                                                      <Button fx:id="button_remove" minWidth="43.0" mnemonicParsing="false" text="&lt;">
+                                                         <VBox.margin>
+                                                            <Insets bottom="10.0" />
+                                                         </VBox.margin></Button>
+                                                      <Button fx:id="button_clearChoices" minWidth="43.0" mnemonicParsing="false" text="Clear" />
                                                    </children>
                                                    <HBox.margin>
                                                       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
