--- a/src/ROMdb/Views/AddSCICRWindow.fxml
+++ b/src/ROMdb/Views/AddSCICRWindow.fxml
@@ -7,24 +7,61 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchor_newScIcr" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="257.0" prefWidth="325.0" style="-fx-background-color: lightgrey;" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.AddSCICRController">
+<AnchorPane fx:id="anchor_newScIcr" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="257.0" prefWidth="325.0" style="-fx-background-color: lightgrey;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.AddSCICRController">
    <children>
-      <Label fx:id="label_scicr" layoutX="36.0" layoutY="29.0" prefHeight="17.0" prefWidth="52.0" text="Type:" />
-      <Label fx:id="label_title" layoutX="36.0" layoutY="64.0" prefHeight="17.0" prefWidth="52.0" text="Title:" />
-      <Label fx:id="label_number" layoutX="36.0" layoutY="99.0" prefHeight="17.0" prefWidth="52.0" text="Number:" />
-      <Label fx:id="label_build" layoutX="36.0" layoutY="134.0" prefHeight="17.0" prefWidth="52.0" text="Build:" />
-      <Label fx:id="label_baseline" layoutX="36.0" layoutY="169.0" prefHeight="17.0" prefWidth="52.0" text="Baseline:" />
+      <Label fx:id="label_scicr" layoutX="36.0" layoutY="29.0" prefHeight="17.0" prefWidth="52.0" text="Type:">
+         <font>
+            <Font name="Times New Roman" size="13.0" />
+         </font></Label>
+      <Label fx:id="label_title" layoutX="36.0" layoutY="64.0" prefHeight="17.0" prefWidth="52.0" text="Title:">
+         <font>
+            <Font name="Times New Roman" size="13.0" />
+         </font></Label>
+      <Label fx:id="label_number" layoutX="36.0" layoutY="99.0" prefHeight="17.0" prefWidth="52.0" text="Number:">
+         <font>
+            <Font name="Times New Roman" size="13.0" />
+         </font></Label>
+      <Label fx:id="label_build" layoutX="36.0" layoutY="134.0" prefHeight="17.0" prefWidth="52.0" text="Build:">
+         <font>
+            <Font name="Times New Roman" size="13.0" />
+         </font></Label>
+      <Label fx:id="label_baseline" layoutX="36.0" layoutY="169.0" prefHeight="17.0" prefWidth="52.0" text="Baseline:">
+         <font>
+            <Font name="Times New Roman" size="13.0" />
+         </font></Label>
       <RadioButton fx:id="radio_sc" layoutX="123.0" layoutY="25.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" selected="true" text="SC">
          <toggleGroup>
             <ToggleGroup fx:id="group" />
-         </toggleGroup></RadioButton>
-      <RadioButton fx:id="radio_icr" layoutX="229.0" layoutY="25.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="39.0" text="ICR" toggleGroup="$group" />
-      <TextField fx:id="field_title" layoutX="103.0" layoutY="60.0" prefHeight="25.0" prefWidth="185.0" promptText="Enter Title" />
-      <TextField fx:id="field_number" layoutX="103.0" layoutY="95.0" prefHeight="25.0" prefWidth="185.0" promptText="Enter Number" />
-      <TextField fx:id="field_build" layoutX="103.0" layoutY="130.0" prefHeight="25.0" prefWidth="185.0" promptText="Enter Build" />
+         </toggleGroup>
+         <font>
+            <Font name="Times New Roman" size="13.0" />
+         </font></RadioButton>
+      <RadioButton fx:id="radio_icr" layoutX="229.0" layoutY="25.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="ICR" toggleGroup="$group">
+         <font>
+            <Font name="Times New Roman" size="13.0" />
+         </font></RadioButton>
+      <TextField fx:id="field_title" layoutX="103.0" layoutY="60.0" prefHeight="25.0" prefWidth="185.0" promptText="Enter Title">
+         <font>
+            <Font name="Times New Roman" size="13.0" />
+         </font></TextField>
+      <TextField fx:id="field_number" layoutX="103.0" layoutY="95.0" prefHeight="25.0" prefWidth="185.0" promptText="Enter Number">
+         <font>
+            <Font name="Times New Roman" size="13.0" />
+         </font></TextField>
+      <TextField fx:id="field_build" layoutX="103.0" layoutY="130.0" prefHeight="25.0" prefWidth="185.0" promptText="Enter Build">
+         <font>
+            <Font name="Times New Roman" size="13.0" />
+         </font></TextField>
       <ComboBox fx:id="combo_baseline" layoutX="103.0" layoutY="165.0" onAction="#updateCurrentBaseline" prefHeight="25.0" prefWidth="185.0" promptText="Select Baseline" />
-      <Button fx:id="button_save" layoutX="103.0" layoutY="200.0" mnemonicParsing="false" onAction="#saveSCICR" prefHeight="25.0" prefWidth="85.0" text="Save" />
-      <Button fx:id="button_cancel" layoutX="203.0" layoutY="200.0" mnemonicParsing="false" onAction="#closeScene" prefHeight="25.0" prefWidth="85.0" text="Cancel" />
+      <Button fx:id="button_save" layoutX="103.0" layoutY="200.0" mnemonicParsing="false" onAction="#saveSCICR" prefHeight="25.0" prefWidth="85.0" text="Save">
+         <font>
+            <Font name="Times New Roman" size="13.0" />
+         </font></Button>
+      <Button fx:id="button_cancel" layoutX="203.0" layoutY="200.0" mnemonicParsing="false" onAction="#closeScene" prefHeight="25.0" prefWidth="85.0" text="Cancel">
+         <font>
+            <Font name="Times New Roman" size="13.0" />
+         </font></Button>
    </children>
 </AnchorPane>
