--- a/src/ROMdb/Views/ArchiveWindow.fxml
+++ b/src/ROMdb/Views/ArchiveWindow.fxml
@@ -9,17 +9,27 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="477.0" prefWidth="825.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.ArchiveController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="477.0" prefWidth="825.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.ArchiveController">
    <bottom>
       <HBox alignment="CENTER_RIGHT" maxHeight="55.0" prefHeight="55.0" prefWidth="861.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="button_cancel" alignment="CENTER" mnemonicParsing="false" onAction="#closeScene" prefHeight="30.0" prefWidth="77.0" text="Cancel" />
             <Button fx:id="button_restore" alignment="CENTER" mnemonicParsing="false" onAction="#restoreSelected" prefHeight="30.0" prefWidth="77.0" text="Restore">
                <HBox.margin>
-                  <Insets left="15.0" right="40.0" />
+                  <Insets left="15.0" right="15.0" />
                </HBox.margin>
+               <font>
+                  <Font name="Times New Roman" size="13.0" />
+               </font>
             </Button>
+            <Button fx:id="button_cancel" alignment="CENTER" mnemonicParsing="false" onAction="#closeScene" prefHeight="30.0" prefWidth="77.0" text="Cancel">
+               <font>
+                  <Font name="Times New Roman" size="13.0" />
+               </font>
+               <HBox.margin>
+                  <Insets right="15.0" />
+               </HBox.margin></Button>
          </children>
       </HBox>
    </bottom>
