--- a/src/ROMdb/Views/EstimationBaseView.fxml
+++ b/src/ROMdb/Views/EstimationBaseView.fxml
@@ -7,8 +7,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<StackPane xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.EstimationBaseController">
+<StackPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.EstimationBaseController">
    <children>
       <VBox alignment="CENTER" StackPane.alignment="CENTER">
          <children>
@@ -22,9 +23,15 @@
                                  <HBox.margin>
                                     <Insets right="10.0" />
                                  </HBox.margin>
+                                 <font>
+                                    <Font name="Times New Roman" size="13.0" />
+                                 </font>
                               </Label>
                         
-                                                            <TextField fx:id="field_cprs" minWidth="100.0" />
+                                                            <TextField fx:id="field_cprs" minWidth="100.0">
+                                 <font>
+                                    <Font name="Times New Roman" size="13.0" />
+                                 </font></TextField>
                            </children>
                            <VBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -36,8 +43,14 @@
                                  <HBox.margin>
                                     <Insets right="10.0" />
                                  </HBox.margin>
+                                 <font>
+                                    <Font name="Times New Roman" size="13.0" />
+                                 </font>
                               </Label>
-                              <TextField fx:id="field_staffMonth" minWidth="100.0" onKeyReleased="#calculateStaffDay" />
+                              <TextField fx:id="field_staffMonth" minWidth="100.0" onKeyReleased="#calculateStaffDay">
+                                 <font>
+                                    <Font name="Times New Roman" size="13.0" />
+                                 </font></TextField>
                            </children>
                            <VBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -49,8 +62,14 @@
                                  <HBox.margin>
                                     <Insets right="10.0" />
                                  </HBox.margin>
+                                 <font>
+                                    <Font name="Times New Roman" size="13.0" />
+                                 </font>
                               </Label>
-                              <TextField fx:id="field_staffDay" editable="false" minWidth="100.0" />
+                              <TextField fx:id="field_staffDay" editable="false" minWidth="100.0">
+                                 <font>
+                                    <Font name="Times New Roman" size="13.0" />
+                                 </font></TextField>
                            </children>
                            <VBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -69,8 +88,14 @@
                                  <HBox.margin>
                                     <Insets right="10.0" />
                                  </HBox.margin>
+                                 <font>
+                                    <Font name="Times New Roman" size="13.0" />
+                                 </font>
                               </Label>
-                              <TextField fx:id="field_defaultSlocs" minWidth="100.0" prefWidth="100.0" />
+                              <TextField fx:id="field_defaultSlocs" minWidth="100.0" prefWidth="100.0">
+                                 <font>
+                                    <Font name="Times New Roman" size="13.0" />
+                                 </font></TextField>
                            </children>
                            <VBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -82,8 +107,14 @@
                                  <HBox.margin>
                                     <Insets right="10.0" />
                                  </HBox.margin>
+                                 <font>
+                                    <Font name="Times New Roman" size="13.0" />
+                                 </font>
                               </Label>
-                              <TextField fx:id="field_cpddDocument" minWidth="100.0" />
+                              <TextField fx:id="field_cpddDocument" minWidth="100.0">
+                                 <font>
+                                    <Font name="Times New Roman" size="13.0" />
+                                 </font></TextField>
                            </children>
                            <VBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -95,8 +126,14 @@
                                  <HBox.margin>
                                     <Insets right="10.0" />
                                  </HBox.margin>
+                                 <font>
+                                    <Font name="Times New Roman" size="13.0" />
+                                 </font>
                               </Label>
-                              <TextField fx:id="field_cpddDate" minWidth="100.0" prefWidth="100.0" />
+                              <TextField fx:id="field_cpddDate" minWidth="100.0" prefWidth="100.0">
+                                 <font>
+                                    <Font name="Times New Roman" size="13.0" />
+                                 </font></TextField>
                            </children>
                            <VBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -115,8 +152,14 @@
                                  <HBox.margin>
                                     <Insets right="10.0" />
                                  </HBox.margin>
+                                 <font>
+                                    <Font name="Times New Roman" size="13.0" />
+                                 </font>
                               </Label>
-                              <TextField fx:id="field_budgetUpgrade" minWidth="100.0" />
+                              <TextField fx:id="field_budgetUpgrade" minWidth="100.0">
+                                 <font>
+                                    <Font name="Times New Roman" size="13.0" />
+                                 </font></TextField>
                            </children>
                            <VBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -128,8 +171,14 @@
                                  <HBox.margin>
                                     <Insets right="10.0" />
                                  </HBox.margin>
+                                 <font>
+                                    <Font name="Times New Roman" size="13.0" />
+                                 </font>
                               </Label>
-                              <TextField fx:id="field_budgetMaint" minWidth="100.0" />
+                              <TextField fx:id="field_budgetMaint" minWidth="100.0">
+                                 <font>
+                                    <Font name="Times New Roman" size="13.0" />
+                                 </font></TextField>
                            </children>
                            <VBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -141,8 +190,14 @@
                                  <HBox.margin>
                                     <Insets right="10.0" />
                                  </HBox.margin>
+                                 <font>
+                                    <Font name="Times New Roman" size="13.0" />
+                                 </font>
                               </Label>
-                              <TextField fx:id="field_ddrCwtSlocs" minWidth="100.0" />
+                              <TextField fx:id="field_ddrCwtSlocs" minWidth="100.0">
+                                 <font>
+                                    <Font name="Times New Roman" size="13.0" />
+                                 </font></TextField>
                            </children>
                            <VBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -170,8 +225,14 @@
                                        <HBox.margin>
                                           <Insets right="10.0" />
                                        </HBox.margin>
+                                       <font>
+                                          <Font name="Times New Roman" size="13.0" />
+                                       </font>
                                     </Label>
-                                    <TextField fx:id="field_designWeight" disable="true" minWidth="120.0" />
+                                    <TextField fx:id="field_designWeight" disable="true" minWidth="120.0">
+                                       <font>
+                                          <Font name="Times New Roman" size="13.0" />
+                                       </font></TextField>
                                  </children>
                                  <VBox.margin>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -183,8 +244,14 @@
                                        <HBox.margin>
                                           <Insets right="10.0" />
                                        </HBox.margin>
+                                       <font>
+                                          <Font name="Times New Roman" size="13.0" />
+                                       </font>
                                     </Label>
-                                    <TextField fx:id="field_codeWeight" disable="true" minWidth="120.0" />
+                                    <TextField fx:id="field_codeWeight" disable="true" minWidth="120.0">
+                                       <font>
+                                          <Font name="Times New Roman" size="13.0" />
+                                       </font></TextField>
                                  </children>
                                  <VBox.margin>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -200,8 +267,14 @@
                                        <HBox.margin>
                                           <Insets right="10.0" />
                                        </HBox.margin>
+                                       <font>
+                                          <Font name="Times New Roman" size="13.0" />
+                                       </font>
                                     </Label>
-                                    <TextField fx:id="field_unitTestingWeight" disable="true" minWidth="120.0" />
+                                    <TextField fx:id="field_unitTestingWeight" disable="true" minWidth="120.0">
+                                       <font>
+                                          <Font name="Times New Roman" size="13.0" />
+                                       </font></TextField>
                                  </children>
                                  <VBox.margin>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -213,8 +286,14 @@
                                        <HBox.margin>
                                           <Insets right="10.0" />
                                        </HBox.margin>
+                                       <font>
+                                          <Font name="Times New Roman" size="13.0" />
+                                       </font>
                                     </Label>
-                                    <TextField fx:id="field_integrationWeight" disable="true" minWidth="120.0" HBox.hgrow="NEVER" />
+                                    <TextField fx:id="field_integrationWeight" disable="true" minWidth="120.0" HBox.hgrow="NEVER">
+                                       <font>
+                                          <Font name="Times New Roman" size="13.0" />
+                                       </font></TextField>
                                  </children>
                                  <VBox.margin>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -229,7 +308,10 @@
             <HBox alignment="CENTER" VBox.vgrow="SOMETIMES">
                <children>
             
-                                                                  <Button fx:id="button_estimateSubmit" mnemonicParsing="false" onAction="#saveChanges" prefHeight="25.0" prefWidth="120.0" text="Save" HBox.hgrow="ALWAYS" />
+                                                                  <Button fx:id="button_estimateSubmit" mnemonicParsing="false" onAction="#saveChanges" prefHeight="25.0" prefWidth="120.0" text="Save" HBox.hgrow="ALWAYS">
+                     <font>
+                        <Font name="Times New Roman" size="13.0" />
+                     </font></Button>
                </children>
                <VBox.margin>
                   <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
