--- a/src/ROMdb/Views/MainMenuView.fxml
+++ b/src/ROMdb/Views/MainMenuView.fxml
@@ -11,8 +11,9 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane minHeight="0.0" style="-fx-background-color: lightgrey;" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.MainMenuController">
+<BorderPane minHeight="0.0" style="-fx-background-color: lightgrey;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.MainMenuController">
    <left>
       <VBox alignment="TOP_CENTER">
          <children>
@@ -20,18 +21,30 @@
                <VBox.margin>
                   <Insets bottom="5.0" />
                </VBox.margin>
+               <font>
+                  <Font name="Times New Roman" size="13.0" />
+               </font>
             </Button>
             <Button fx:id="button_requirementsEntry" disable="true" maxHeight="-Infinity" mnemonicParsing="false" onAction="#viewRequirementsEntry" prefHeight="25.0" prefWidth="135.0" text="Requirements Entry">
                <VBox.margin>
                   <Insets bottom="5.0" />
                </VBox.margin>
+               <font>
+                  <Font name="Times New Roman" size="13.0" />
+               </font>
             </Button>
             <Button fx:id="button_estimationBase" disable="true" maxHeight="-Infinity" mnemonicParsing="false" onAction="#viewEstimationBase" prefHeight="25.0" prefWidth="135.0" text="Estimation Base">
                <VBox.margin>
                   <Insets bottom="5.0" />
                </VBox.margin>
+               <font>
+                  <Font name="Times New Roman" size="13.0" />
+               </font>
             </Button>
-            <Button fx:id="button_viewArchive" disable="true" mnemonicParsing="false" onAction="#viewArchive" prefHeight="25.0" prefWidth="135.0" text="View Archive" />
+            <Button fx:id="button_viewArchive" disable="true" mnemonicParsing="false" onAction="#viewArchive" prefHeight="25.0" prefWidth="135.0" text="View Archive">
+               <font>
+                  <Font name="Times New Roman" size="13.0" />
+               </font></Button>
             <Region minHeight="0.0" VBox.vgrow="SOMETIMES" />
             <ComboBox fx:id="combo_baseline" disable="true" maxHeight="-Infinity" onAction="#changeSelectedBaseline" prefHeight="16.0" prefWidth="135.0" promptText="Select Baseline">
                <VBox.margin>
@@ -39,7 +52,10 @@
                </VBox.margin>
             </ComboBox>
             <Region minHeight="1.0" VBox.vgrow="SOMETIMES" />
-            <Button fx:id="button_exit" maxHeight="-Infinity" mnemonicParsing="false" onAction="#exitProgram" prefHeight="25.0" prefWidth="135.0" text="Exit Program" />
+            <Button fx:id="button_exit" maxHeight="-Infinity" mnemonicParsing="false" onAction="#exitProgram" prefHeight="25.0" prefWidth="135.0" text="Exit Program">
+               <font>
+                  <Font name="Times New Roman" size="13.0" />
+               </font></Button>
          </children>
          <BorderPane.margin>
             <Insets left="10.0" right="10.0" top="15.0" />
