--- a/src/ROMdb/Views/SCICRView.fxml
+++ b/src/ROMdb/Views/SCICRView.fxml
@@ -10,8 +10,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<StackPane xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.SCICRController">
+<StackPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.SCICRController">
    <children>
       <BorderPane style="-fx-background-color: lightgrey;">
          <center>
@@ -24,11 +25,17 @@
                            <HBox.margin>
                               <Insets right="15.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="Times New Roman" size="13.0" />
+                           </font>
                         </Button>
                          <Button fx:id="button_newSCICR" mnemonicParsing="false" onAction="#createNewSCICR" text="New SC/ICR">
                            <HBox.margin>
                               <Insets right="15.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="Times New Roman" size="13.0" />
+                           </font>
                         </Button>
                      </children>
                      <VBox.margin>
