--- a/src/ROMdb/Views/AddRequirementWindow.fxml
+++ b/src/ROMdb/Views/AddRequirementWindow.fxml
@@ -87,6 +87,19 @@
                         <ComboBox fx:id="combo_baseline" onAction="#changeSCICRToSelectedBaseline" prefWidth="155.0" />
                      </children>
                   </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label minWidth="120.0" text="Build:">
+                           <font>
+                              <Font name="Times New Roman" size="13.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets right="5.0" />
+                           </HBox.margin>
+                        </Label>
+                        <ComboBox fx:id="combo_build" prefWidth="155.0" />
+                     </children>
+                  </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                      <children>
                         <Label minWidth="120.0" text="SC/ICR:">
@@ -129,7 +142,15 @@
                            </font></TextField>
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                  <HBox prefHeight="100.0" prefWidth="200.0" />
+               </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </VBox>
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="300.0">
+               <children>
+                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                      <children>
                         <Label minWidth="120.0" text="# Changed:">
                            <HBox.margin>
@@ -142,16 +163,10 @@
                         <TextField fx:id="field_changed" minWidth="155.0">
                            <font>
                               <Font name="Times New Roman" size="13.0" />
-                           </font></TextField>
+                           </font>
+                        </TextField>
                      </children>
                   </HBox>
-               </children>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="300.0">
-               <children>
                   <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                      <children>
                         <Label minWidth="120.0" text="# Deleted:">
